--- a/builder.css
+++ b/builder.css
@@ -174,10 +174,10 @@ transition:all 0.52s ease-out;}
 .display .group:last-child {border:0 none;}
 .display .group .sub {margin:4px 0 0 11px; float:left;}
 .display .group .sub label {color:#888; width:89px;}
-.display .git-branch {color:#c7c323;}
-.display .svn-branch {color:#00c7c7;}
-.display .hg-branch {color:#ca24c4;}
-.display .git-conflicted, .display .hg-conflicted {color:#ae350e;}
+.display .git {color:#c7c323;}
+.display .svn {color:#00c7c7;}
+.display .hg {color:#ca24c4;}
+.display .git-conflicted, .display .hg-conflicted {color:#c80c00;}
 .display .git-ahead {color:#00c7c7;}
 .display .option-conflict {color:#c7c323;}
 .display .git-no-branch {color:#c80c00;}
@@ -236,6 +236,7 @@ transition:all 0.22s ease-out;}
 .group label {cursor:pointer; color:#444; padding:0 0 0 8px; float:left;}
 .group label:hover {color:#000;}
 .group.general .header {float:none; background:#eee; border-radius:20px; padding:3px 12px; display:block; margin:12px 0;}
+.config .master {width:191px;}
 .config.characters {width:280px;}
 .config.characters input {font-family:monospace; float:left; width:25px; text-align:center;}
 .config.characters label {margin-left:1px; display:block; float:left; padding:8px 10px 4px; }
