--- a/builder.css
+++ b/builder.css
@@ -190,11 +190,8 @@ transition:all 0.52s ease-out;}
 .color-modal ul  {float:left; width:168px; max-width:168px;}
 .color-modal ul li {border-left:0 none; border-right:1px solid #fff; border-bottom:1px solid #fff;}
 .color-modal ul li:hover {width:17px; height:17px; margin:0; border-width:0 1px 1px 0; padding:3px;}
-.color-picker {opacity:0.4; width:10px; height:10px; margin:-3px 0 0 5px; cursor:pointer; float:right; border:1px solid #aaa; padding:4px; font-family:serif; font-size:12pt; color:#666; -webkit-box-shadow:2px 2px 3px #ccc; box-shadow:2px 2px 3px #ccc;
--webkit-transition:all 0.22s ease-out;
--moz-transition:all 0.22s ease-out;
-transition:all 0.22s ease-out;}
-.color-picker:hover {width:12px; height:12px; margin:-4px -1px -1px 4px; opacity:1.0;}
+.color-picker {width:4px; height:4px; margin:-3px 0 0 5px; cursor:pointer; float:right; border:3px solid #fff; padding:4px; font-family:serif; font-size:12pt; color:#666; -webkit-box-shadow:2px 2px 3px #ccc; box-shadow:2px 2px 3px #ccc;}
+.color-picker:hover {border-width:2px; width:6px; height:6px;}
 
 .color-red {background:#c80c00 !important;}
 .color-lightred {background:#ff6a68 !important; font-weight:bold;}
@@ -240,6 +237,8 @@ transition:all 0.22s ease-out;}
 .config.characters {width:280px;}
 .config.characters input {font-family:monospace; float:left; width:25px; text-align:center;}
 .config.characters label {margin-left:1px; display:block; float:left; padding:8px 10px 4px; }
+.config.characters .color-picker {margin-top:6px; margin-left:0;}
+.config.characters .group.long .color-picker {margin-top:2px;}
 .config.characters .group {clear:both; float:left; margin:0 0 10px;}
 .config.characters .long input {width:100px; font-size:10pt; text-align:left;}
 .config.characters .long label {padding:5px 10px 6px;}
