--- a/FunForms.css
+++ b/FunForms.css
@@ -100,7 +100,7 @@ box-shadow:1px 1px 0 #777,
 3px 3px 10px #2c2c2c;}
 .MooDialogTitle { padding-top:30px; }
 .MooDialog .content input {width:43%;}
-.MooDialog p {float:left; display:block; font-size:16pt; color:#555; margin:4px 0 0; font-size:16pt; margin:5px 0 0;}
+.MooDialog p {float:left; display:block; font-size:15pt; color:#555; margin:6px 0 0;}
 .MooDialog .buttons {float:right; text-align:right; margin:0; padding:0; border:0; background:none; position:relative; top:-6px;}
 .MooDialog .textInput { width:200px; float:left; }
 .MooDialog .MooDialogAlert{padding-left:40px; min-height:40px; }
